syntax="proto3";

package demo.echo_server;

option go_package="learn.trpc.go/echo_server/pb";

service EchoServer {
  rpc Echo (EchoRequest) returns (EchoReply) {}
}

message EchoRequest {
  string msg = 1;
}

message EchoReply {
  string msg = 1;
}